# mocodo

./: .gitignore  .gitignore.orig  Gallery.md  Installation.md  LICENSE  Lancement.md  MLD.md  PostScriptum.md  PostTraitement.md  ProjectHome.md  README.md  Syntaxe.md  index.html  index.php  log.js  main.py  mcd2nodebox.py  mcd2svg.py  messages.pot  messages_fr.po  mocodo.py  mocodo.tmproj  pyproject.toml  setup.py
colors/: blank.json  bw.json  desert.json  keepsake.json  mondrian.json  ocean.json  pond.json  wb.json  xinnian.json
doc/: LA_111.mcd  Untitled.ipynb  build_doc.sh  fr_cheat_sheet.md  fr_help.txt  fr_refman.html  fr_refman.ipynb  option_syntax_2.abnf  tutorial.ipynb
laowantong.vscode-mocodo/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  highlighting_zoo.mcd  language-configuration.json  package.json  vsc-extension-quickstart.md  vscode-mocodo-0.0.1.vsix  vscode-mocodo-0.0.2.vsix  vscode-mocodo-0.0.3.vsix  yaml_to_json_tmlanguage.py
magic/: setup.py
main/: association-tests.py  association.py  attribute-tests.py  attribute.py  common.py  entity-tests.py  entity.py  fontMetrics-tests.py  fontMetrics.json  fontMetrics.py  goodies.py  leg.py  mcd-tests.py  mcd.py  mcd2nodebox.py  mcd2svg.py  nodeboxgoodies.py  svggoodies.py  tables-tests.py  tables.py
mocodo/: __init__.py  __main__.py  api.py  argument_parser.py  arrange_bb.py  arrange_ga.py  arrange_lp.py  arrange_lp_large.py  association.py  attribute.py  call.py  cli.py  command_line.py  common.py  constraint.py  cross.py  damerau_levenshtein.py  deprecated_errors.py  diagram_link.py  drawing_helpers.py  drawing_helpers_nodebox.py  drawing_helpers_svg.py  dump_lp.py  dynamic.py  entity.py  file_helpers.py  fitness.py  font_metrics.py  goodies.py  grid.py  guess_title.py  inheritance.py  leg.py  magic.py  magic_command.py  mcd.py  mcd_to_nodebox.py  mcd_to_svg.py  mocodo.py  mocodo_error.py  (+13 more)
nb_magic/: mocodo.py
pristine/: linux.json  mac.json  macNodebox.json  sandbox.mcd  windows.json
res/: messages_fr.mo
shapes/: arial.json  georgia.json  mondrian.json  sans.json  serif.json  times.json  trebuchet.json  verdana.json  xinnian.json
tables/: html.json  latex.json  mysql.json  oracle.json  txt.json  txt2tags.json
test/: test_api.py  test_argument_parser.py  test_arrange_bb.py  test_arrange_ga.py  test_association.py  test_attribute.py  test_constraint.py  test_convert_chen.py  test_cross.py  test_data_dict.py  test_dump.py  test_entity.py  test_fitness.py  test_grid.py  test_guess_title.py  test_inheritance.py  test_magic_command.py  test_mcd.py  test_mcd_dimensions.py  test_modify.py  test_parse_mcd.py  test_parser_tools.py  test_zoo.py  (+16 more)
(+1489 files in other folders)
