[tool.poetry]
name = "mocodo"
version = "3.0.7"
description = "Modélisation Conceptuelle de Données. Nickel. Ni souris."
authors = ["Aristide Grange"]
license = "MIT"
readme = "README.md"
homepage = "https://www.mocodo.net"
repository = "https://github.com/laowantong/mocodo/"
keywords = ["education",
            "relational",
            "database",
            "drawing",
            "ERD",
            "SVG",
            "Merise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Database",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/laowantong/mocodo/issues"

[tool.poetry.scripts]
mocodo = 'mocodo.__main__:main'
