[project]
name = "mocodo"
version = "4.2.13" # previously dynamically set by poetry-version-plugin
description = "Modélisation Conceptuelle de Données. Nickel. Ni souris."
authors = [{ name = "Aristide Grange" }]
requires-python = ">=3.6.1,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "education",
    "relational",
    "database",
    "drawing",
    "ERD",
    "SVG",
    "Merise",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Topic :: Database",
    "Topic :: Education",
]
dependencies = ["requests>=2.22.0,<3"]

[project.urls]
Homepage = "https://www.mocodo.net/"
Repository = "https://github.com/laowantong/mocodo/"
issues = "https://github.com/laowantong/mocodo/issues"

[project.scripts]
mocodo = "mocodo.__main__:main"

[dependency-groups]
dev = []

[tool.poetry-version-plugin]
source = "init" # read version from __init__.py

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
